Added new block #4

--- a/prepros.config
+++ b/prepros.config
@@ -880,6 +880,16 @@
     },
     "files": [
       {
+        "file": "style/scss/style.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "style/style.scss",
         "config": {
           "tasks": {
