--- a/prepros.config
+++ b/prepros.config
@@ -880,6 +880,27 @@
     },
     "files": [
       {
+        "file": "assets/additional-info/additional-info-bg.jpg",
+        "config": {
+          "tasks": {
+            "jpg": {
+              "options": {
+                "quality": 80
+              }
+            }
+          },
+          "optimized": true,
+          "originalSize": 191676
+        }
+      },
+      {
+        "file": "assets/banner/benefit-1.svg",
+        "config": {
+          "optimized": true,
+          "originalSize": 571904
+        }
+      },
+      {
         "file": "style/scss/style.scss",
         "config": {
           "tasks": {
