--- a/prepros.config
+++ b/prepros.config
@@ -901,6 +901,33 @@
         }
       },
       {
+        "file": "assets/banner/benefit-2.svg",
+        "config": {
+          "optimized": true,
+          "originalSize": 479252
+        }
+      },
+      {
+        "file": "assets/banner/benefit-3.svg",
+        "config": {
+          "optimized": true,
+          "originalSize": 738004
+        }
+      },
+      {
+        "file": "assets/banner/benefit-4.svg",
+        "config": {
+          "optimized": true,
+          "originalSize": 431644
+        }
+      },
+      {
+        "file": "scripts/script.js",
+        "config": {
+          "customOutput": "scripts/script-dist.js"
+        }
+      },
+      {
         "file": "style/scss/style.scss",
         "config": {
           "tasks": {
